<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">领跑者</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">我的页面</string>
    <string name="sign_in">注册</string>
    <string name="run_pause">暂停</string>
    <string name="wt_time_yesterday">昨天</string>
    <string name="run_countinue">继续</string>
    <string name="open_sound_title">是否打开语音提示</string>
    <string name="open_sound_update">自动检查更新关闭</string>
    <string name="open_sound_music">设置背景音乐</string>
    <string name="open_sound_tip">语音提示开启</string>
    <string name="logout_label">退出登陆</string>
    <string name="about">关于领跑者</string>
    <string name="open_daohang">导航</string>
    <string name="open_daohangtishi">导航开启</string>
    <string name="jiluguiji">记录轨迹</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="login_success">登陆成功</string>
    <string name="login">登陆</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">注册</string>
    <string name="register">REGISTER</string>
    <string name="select_date">日期</string>
    <string name="is_processed">纠偏</string>
    <string name="track_distance">查询</string>
    <string name="app_title">百度鹰眼</string>
    <string name="start_trace">开始</string>
    <string name="stop_trace">停止</string>
    <string name="fence_operator">操作</string>
    <string name="geo_fence">地理围栏</string>
    <string name="track_upload">运动</string>
    <string name="track_query">趣味跑</string>
    <string name="history_track">查询历史轨迹</string>
    <string name="realtime_track">查询实时轨迹</string>
    <string name="circular_fence">圆形围栏</string>
    <string name="vertexes_fence">多边形围栏</string>
    <string name="delete_fence">删除围栏</string>
    <string name="fence_list">围栏列表</string>
    <string name="monitored_status">监控状态</string>
    <string name="history_alarm">历史报警</string>
    <string name="delay_alarm">延迟报警</string>
    <string name="fence_name">围栏名称</string>
    <string name="fence_desc">围栏描述</string>
    <string name="set_fence">设置围栏</string>
    <string name="fence_radius">围栏半径(单位：米)</string>
    <string name="vertex_number">顶点数量</string>
    <string name="fence_precision">去噪精度(单位：米)</string>
    <string name="fence_type">围栏类型</string>
    <string name="server_fence">服务端围栏</string>
    <string name="local_fence">本地围栏</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="circular_fence_caption">请点击地图标记围栏圆心</string>
    <string name="vertexes_fence_caption">请按顺时针或逆时针方向点击地图</string>
    <string name="font_type">微软雅黑</string>
    <string name="starting_travel">正在开启请稍后。。</string>
    <string name="starting_chenggong">开启成功</string>
    <string name="starting_shibai">开启失败</string>
    <string name="tv_speed">配速</string>
    <string name="speed">5 \' 30 \'\'</string>
    <string name="tv_time">时长</string>
    <string name="c_time">00:00:00</string>
    <string name="makers">收藏</string>
    <string name="daohang">导航</string>
    <string name="isopendaohang">是否打开导航</string>
    <string name="guiji">轨迹</string>
    <string name="isguiji">是否上传轨迹</string>
    <string name="gaimima">修改密码</string>
    <string name="nickname">昵称</string>
    <string name="km">Km</string>
    <string name="run_data_distance">累计跑步距离</string>
    <string name="time_h">H</string>
    <string name="data_time">累计跑步时间</string>
    <string name="count">次</string>
    <string name="run_count">跑步次数</string>
    <string name="ble_not">不支持蓝牙</string>
    <string name="send">发送</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="connecting">正在连接</string>
    <string name="not_connect">没有连接</string>
    <string name="title_paired_devices">配对的设备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="scanning">扫描设备...</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_found">没有发现设备</string>
    <string name="none_paired">没有配对的设备</string>
    <!--  BluetoothChat -->
    <string name="bt_not_enabled_leaving">蓝牙不启用。离开蓝牙聊天。</string>
    <string name="title_connecting">连接...</string>
    <string name="title_connected_to">连接到
        <xliff:g id="device_name">%1$s</xliff:g>
    </string>
    <string name="title_not_connected">没有连接</string>
    <string name="start">开始</string>
    <string name="qianming">站得更高才可以看的更远，懂得的越多就会得到的越多，所以唯有不断的兖实自己，让自己能像巨人一样拥有强大的体魄，像阿凡提拥有过人的智慧，才能让自己处于不败之地。</string>
    <string name="no_result" >对不起，没有搜索到相关数据！</string>
    <string name="time">时间</string>
    <string name="pingjunpeisu">平均配速</string>
    <string name="juli">距离</string>
    <!-- 轨迹纠偏 -->
    <string name="trace_demo">轨迹纠偏功能</string>
    <string name="hud_demo">HUD 导航</string>
    <string name="trace_description">将轨迹平滑的绘制在地图上</string>
    <string name="hudview">直观展示了导航信息，是一种安全简洁的导航模式</string>
    <string name="distance">"总距离："</string>
    <string name="stop_time">"等   待："</string>
    <string name="draw_lines">轨迹纠偏</string>
    <string name="clean_finished_overlay_status">清除已完成线路</string>
    <string name="radiobutton_gaode">高德坐标</string>
    <string name="radiobutton_gps">GPS坐标</string>
    <string name="radiobutton_baidu">百度坐标</string>
</resources>
