<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#8021242e"
        >
        <LinearLayout
           style="@style/Sportstrack_llv"
            >
            <TextView
                android:id="@+id/basicmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/time"/>
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="00:00:05"/>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>
        <LinearLayout
            style="@style/Sportstrack_llv">
            <TextView
                android:id="@+id/rsmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/pingjunpeisu"/>
            <TextView
                android:id="@+id/sudu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="7‘36“"/>
        </LinearLayout>



        <View
            android:layout_width="2dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>
        <LinearLayout
            style="@style/Sportstrack_llv">
            <TextView
                android:id="@+id/nightmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/juli"/>
            <TextView
                android:id="@+id/juli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="5.12KM"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8021242e"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="最快8’09”"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="最慢5‘12“"
                android:layout_marginRight="8dp"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/caitiao"/>
    </LinearLayout>
    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/location_errInfo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="TextView"
        android:visibility="gone"/>


</LinearLayout>
